Example figures updated.

--- a/bug_test.ipynb
+++ b/bug_test.ipynb
@@ -98,7 +98,7 @@
     "hist_bar = ax[0].hist(test_random, bins=100, density=True, histtype=\"bar\")\n",
     "hist_step = ax[1].hist(test_random, bins=100, density=True, histtype=\"step\")\n",
     "\n",
-    "plt.savefig(\"./histogram_test_expected.png\")"
+    "# plt.savefig(\"./histogram_test_expected.png\")"
    ]
   },
   {
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e7c1cdf",
+   "id": "b2385c8a",
    "metadata": {},
    "outputs": [],
    "source": []
